--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,12 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Badge-Generator</title>
     <link href="/styles2.css" rel="stylesheet">
+    <link href="/nav.css" rel="stylesheet">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/433/433369.png"> 
 </head> 
-<body> -->
+<body style="width: 100%;">
+    <header class="main-head">
+        <nav>
+          <h1 id="logo">ABCDEFG</h1>
+          <ul class="nav-links" style="color: white;">
+            <li><a href="/">HOME</a></li>
+            <li><a href="/badge/user">STUDENT</a></li>
+            <li><a href="/badge/admin">ADMIN</a></li>
+          </ul>
+          <div class="burger">
+            <span class="line1"></span>
+            <span class="line2"></span>
+            <span class="line3"></span>
+          </div>
+        </nav>
+      </header>
+      <script>
+        const nav = document.querySelector(".nav-links");
+        const burger = document.querySelector(".burger");
+        const links = nav.querySelectorAll("a");
+        
+        burger.addEventListener("click", () => {
+        nav.classList.toggle("nav-open");
+        burger.classList.toggle("toggle");
+        });
+        
+        links.forEach(link => {
+        link.addEventListener("click", () => {
+        nav.classList.toggle("nav-open");
+        burger.classList.toggle("toggle");
+        });
+        });
+        
+        </script>
     <!-- <h1>Welcome</h1>
     <h3><a href="/badge">Badges</a></h3> -->
-    <% layout('layouts/boilerplate')%>
+   
     <link href="/styles2.css" rel="stylesheet">
     <div class="container">
         <div class="team_container">
@@ -87,5 +121,5 @@
             <!--fourth user design ends here-->
         </div>
     </div>
-<!-- </body>
-</html> -->
+</body>
+</html>
