--- a/views/Layouts/boilerplate.ejs
+++ b/views/Layouts/boilerplate.ejs
@@ -20,9 +20,9 @@
 
 </head>
 <body style="width: 100%;">
-    <%- include('../Partials/navbar')%>
+    <%- include('../partials/navbar')%>
     <%- body %> 
-    <%- include('../Partials/footer')  %> 
+    <%- include('../partials/footer')  %> 
     
 </body>
 </html>
