--- a/views/badge/edit.ejs
+++ b/views/badge/edit.ejs
@@ -7,12 +7,13 @@
     <title>Badge-Generator</title>
     <link href="/styles2.css" rel="stylesheet">
     <link href="/nav.css" rel="stylesheet">
+    <link href="/footer.css" rel="stylesheet">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/433/433369.png"> 
 </head> 
 <body style="width: 100%;"> 
     <header class="main-head">
         <nav>
-          <h1 id="logo">ABCDEFG</h1>
+            <div class="logo"><a href="/"><img src="/images/logo.svg"><h1>Badge-Generater</h1></a></div>
           <ul class="nav-links" style="color: white;">
             <li><a href="/">HOME</a></li>
             <li><a href="/badge/user">STUDENT</a></li>
@@ -77,7 +78,10 @@
                     <label for="photo-id">Photo-ID :
 
                     </label>
-                    <img style="max-width: 9rem;margin: 0;width: 12vh;
+                    <img style="max-width: 9rem;
+                    width: 12vh;
+                    height: 12vh;
+                    margin: 0;
                     transition: all 0.3s ease-in-out;" src="<%=badge.image.url%>" alt="">
                     <button onclick="document.getElementById('photo-id').click()">UPLOAD</button>
                     <input type="file" name="images" id="photo-id" >
@@ -90,7 +94,7 @@
                 <div class="contact"><label for="contact">Contact :
 
                 </label>
-                    <input type="number" name="mobile" value="<%= badge.mobile %>" placeholder="Contant number" required>
+                    <input type="number" name="mobile" min="1000000000" max="9999999999" value="<%= badge.mobile %>" placeholder="Contant number" required>
                 </div>
                 <div class="contact"><label for="contact">Email :
 
@@ -113,8 +117,11 @@
 
                 <div class="signature">
                     <label for="signature">Signature :</label>
-                    <img style="max-width: 9rem;width: 12vh;margin: 0;
-                    transition: all 0.3s ease-in-out;" src="<%=badge.image.url%>" alt="">
+                    <img style="max-width: 9rem;
+                    width: 12vh;
+                    height: 12vh;
+                    margin: 0;
+                    transition: all 0.3s ease-in-out;" src="<%=badge.signature.url%>" alt="">
                     <button onclick="document.getElementById('signature').click()">UPLOAD</button>
                     <input type="file" name="images" id="signature" >
                 </div>
@@ -125,5 +132,26 @@
                 </div>
         </form>
     </main>
+    <footer id="footer">
+        <h4>Badge-Generator &copy; 2021</h4>
+        <div id="contri">
+              <ul>
+              <lh>Contriutors</lh>
+              <li><a href="https://github.com/ayush572" target="_blank">Ayush Daga</a></li>
+              <li><a href="https://github.com/Aniumbott" target="_blank">Aniket Rana</a></li>
+              <li><a href="https://github.com/Harshil-Jani" target="_blank">Harshil Jani</a></li>
+              <li><a href="https://github.com/Rameshchandrapola" target="_blank">Pola Ramesh Chandra</a></li>
+              <li><a href="https://github.com/rahuljadav21" target="_blank">Rahul Jadav</a></li>
+              </ul>
+            </div>
+      </footer>
+
+<style>
+    @media screen and (max-width: 870px) {
+footer{
+display: none;
+}
+}
+</style>
 </body>
 </html>
