--- a/public/card.css
+++ b/public/card.css
@@ -10,8 +10,8 @@ font-size: 100%;
 
 
 body{
-width: 100vw;
-height: 100vh;
+    width: 100%;
+    height: 100%;
 background: #eeeeee;
 font-family: 'Source Sans Pro', sans-serif;
 }
