--- a/public/creater.css
+++ b/public/creater.css
@@ -56,7 +56,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    
+    margin-bottom: 20vh;
     }
     
     .form-title{
