--- a/public/nav.css
+++ b/public/nav.css
@@ -10,8 +10,8 @@ font-size: 100%;
 
 
 body{
-width: 100vw;
-height: 100vh;
+  width: 100%;
+  height: 100%;
 background: #eeeeee;
 font-family: 'Source Sans Pro', sans-serif;
 }
@@ -46,9 +46,25 @@ nav a{
 
 }
 
-#logo {
-flex: 1 1 20rem;
+nav a:hover{
+  color: #1FB6FF;
 }
+
+.logo{
+  flex: 1 1 20rem;
+}
+
+.logo a{
+  width: 100%;
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+}
+.logo a img{
+  height: 3rem;
+}
+
+
 .nav-links {
 display: flex;
 justify-content: space-around;
