--- a/views/getBadge/forAdmin.ejs
+++ b/views/getBadge/forAdmin.ejs
@@ -74,7 +74,7 @@
     <h4>Badge-Generator &copy; 2021</h4>
     <div id="contri">
           <ul>
-          <lh>Contriutors</lh>
+          <lh>Contributors</lh>
           <li><a href="https://github.com/ayush572" target="_blank">Ayush Daga</a></li>
           <li><a href="https://github.com/Aniumbott" target="_blank">Aniket Rana</a></li>
           <li><a href="https://github.com/Harshil-Jani" target="_blank">Harshil Jani</a></li>
